[gd_scene load_steps=6 format=3 uid="uid://b8chnkiicj0sl"]

[ext_resource type="Texture2D" uid="uid://c6jhr0qdqlffo" path="res://Images/Color.png" id="1_cqskg"]
[ext_resource type="Script" uid="uid://was6a0w1wxqi" path="res://Scripts/Menu/MenuButtons.gd" id="2_3qr6s"]
[ext_resource type="FontFile" uid="uid://cdvq2i7ihcs1v" path="res://Text/G8.otf" id="2_3ymnh"]
[ext_resource type="Script" uid="uid://cjex64lwj4o47" path="res://Scripts/Menu/translateButton.gd" id="5_8inha"]

[sub_resource type="LabelSettings" id="LabelSettings_3qr6s"]
font = ExtResource("2_3ymnh")
font_size = 50
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Node2D"]

[node name="Backg" type="Sprite2D" parent="."]
self_modulate = Color(7.70092e-07, 0.873513, 0.924528, 1)
texture = ExtResource("1_cqskg")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1080, 2412)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 290.0
offset_top = 800.0
offset_right = 790.0
offset_bottom = 1300.0
pivot_offset = Vector2(250, 250)
script = ExtResource("2_3qr6s")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 45.0
offset_top = -600.0
offset_right = 455.0
offset_bottom = -450.0
text = "Супер 
Крестики-Нолики"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartAI" type="Button" parent="Control"]
layout_mode = 0
offset_left = -200.0
offset_right = 200.0
offset_bottom = 200.0

[node name="StartAI" type="Label" parent="Control/StartAI"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 375.0
offset_bottom = 175.0
text = "Начать
игру с ИИ"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartHuman" type="Button" parent="Control"]
layout_mode = 0
offset_left = 300.0
offset_right = 700.0
offset_bottom = 200.0

[node name="StartHuman" type="Label" parent="Control/StartHuman"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 375.0
offset_bottom = 175.0
text = "Начать
игру с другом"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Language" type="Button" parent="Control"]
layout_mode = 0
offset_left = 280.0
offset_top = 250.0
offset_right = 700.0
offset_bottom = 375.0
script = ExtResource("5_8inha")

[node name="switchToLan" type="Label" parent="Control/Language"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 409.0
offset_bottom = 123.0
text = "Switch to
English language"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tutorial" type="Button" parent="Control"]
layout_mode = 0
offset_left = -200.0
offset_top = 250.0
offset_right = 220.0
offset_bottom = 375.0

[node name="Tutorial" type="Label" parent="Control/Tutorial"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 411.0
offset_bottom = 115.0
text = "Обучение"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Button" parent="Control"]
layout_mode = 0
offset_top = 400.0
offset_right = 500.0
offset_bottom = 525.0

[node name="Stats" type="Label" parent="Control/Stats"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 115.0
text = "Статистика"
label_settings = SubResource("LabelSettings_3qr6s")
horizontal_alignment = 1
vertical_alignment = 1
